--- a/src/scss/new-memory/step-1.scss
+++ b/src/scss/new-memory/step-1.scss
@@ -13,6 +13,7 @@
 		border: none;
 		font-size: $fs-sm;
 		cursor: pointer;
+		text-align: center;
 		z-index: 1;
 		transition: color ease-out $tr;
 
