fix: land color

--- a/src/scss/new-memory/step-1.scss
+++ b/src/scss/new-memory/step-1.scss
@@ -12,6 +12,7 @@
 		background-color: transparent;
 		border: none;
 		font-size: $fs-sm;
+		color: $very-dark-green;
 		cursor: pointer;
 		text-align: center;
 		z-index: 1;
