--- a/src/scss/components/vars.scss
+++ b/src/scss/components/vars.scss
@@ -73,6 +73,11 @@ $success-secondary	: #CBE1C9;
 $try-again-primary	: #FFC80A;
 $try-again-secondary: #EADFB9;
 
+// Colors - Memory Themes.
+$theme-black: #131414;
+$theme-red	: #33040D;
+$theme-blue	: #062053;
+
 // Others.
 $tr					: 0.35s;
 $radius-checkbox	: 2px;
