--- a/src/scss/header/profile.scss
+++ b/src/scss/header/profile.scss
@@ -1,6 +1,10 @@
 .header-profile {
 	position: relative;
 
+	@media (min-width: $xl) {
+		width: 350px
+	}
+
 	&.opened {
 		.header-profile-dropdown {
 			display: block
