--- a/src/scss/header/menu.scss
+++ b/src/scss/header/menu.scss
@@ -1,36 +1,50 @@
-.header-menu-button {
-	font-family: $ff;
-	background-color: transparent;
-	border: none;
-	padding: 0;
-	cursor: pointer;
-	transition: opacity ease-out $tr;
-
-	&:hover {
-		opacity: 0.7
+.header-menu {
+	@media (min-width: $xl) {
+		width: 350px
 	}
 
-	&-lines {
-		position: relative;
-		display: block;
-		width: 14px;
-		height: 13px;
-		margin-right: 13px;
+	&-button {
+		font-family: $ff;
+		background-color: transparent;
+		border: none;
+		padding: 0;
+		cursor: pointer;
+		transition: opacity ease-out $tr;
 
-		span {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 1px;
-			background-color: $dark-yellow;
+		&:hover {
+			opacity: 0.7
+		}
 
-			&:nth-child(2) {
-				top: 6px
+		&-lines {
+			position: relative;
+			display: block;
+			width: 14px;
+			height: 13px;
+
+			span {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 1px;
+				background-color: $dark-yellow;
+
+				&:nth-child(2) {
+					top: 6px
+				}
+
+				&:last-child {
+					top: 12px
+				}
 			}
+		}
 
-			&:last-child {
-				top: 12px
+		&-label {
+			display: none;
+
+			@media (min-width: $xl) {
+				display: block;
+				margin-left: 13px
 			}
 		}
 	}
