--- a/src/scss/pages/auth.scss
+++ b/src/scss/pages/auth.scss
@@ -41,10 +41,20 @@
 		max-width: 370px;
 
 		&-wrapper {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
 			width: 100%;
 
+			@media (min-width: $md) {
+				align-items: flex-start
+			}
+
 			@media (min-width: $lg) {
-				width: 50%;
+				width: 50%
+			}
+
+			@media (min-width: $xl) {
 				padding-left: 95px
 			}
 		}
