--- a/src/scss/pages/tariff.scss
+++ b/src/scss/pages/tariff.scss
@@ -31,14 +31,14 @@
 	&-duration {
 		font-size: $fs-lg;
 		padding-left: 7px;
-		margin-bottom: 32px
+		margin-bottom: 31px
 	}
 
 	&-plan {
 		border: 1px solid #8FB7C5;
 		border-radius: 30px;
-		padding: 16px 23px 28px 28px;
-		margin-bottom: 24px;
+		padding: 17px 23px 28px 28px;
+		margin-bottom: 25px;
 		cursor: pointer;
 		background-color: transparent;
 		transition:
@@ -78,17 +78,18 @@
 		&-price {
 			font-family: $ff-title;
 			font-size: 30px;
-			font-weight: $fw-semibold;
+			font-weight: $fw-medium;
 			color: $dark-yellow;
 			margin-left: auto
 		}
 
 		&-features {
 			column-gap: 8.5px;
-			row-gap: 7px
+			row-gap: 8px
 		}
 
 		&-feature {
+			font-family: $ff;
 			font-size: $fs-sm;
 			line-height: 2.21;
 			padding: 0 12px;
@@ -128,12 +129,13 @@
 
 		&-header {
 			border-bottom: 0.5px solid #8FB7C5;
-			padding-bottom: 30px;
+			padding-bottom: 28px;
 			margin-bottom: 30px;
 
 			&-info {
 				width: calc(100% - 70px);
 				font-family: $ff-title;
+				line-height: $lh-3;
 				font-size: $fs-lg;
 				font-weight: $fw-semibold;
 				padding-left: 20px
@@ -144,18 +146,23 @@
 			font-size: $fs-sm;
 			font-weight: $fw-regular;
 			color: $dark-yellow;
-			margin-top: 2px
+			margin-top: 4px
 		}
 
 		&-rust {
 			background-color: $a-bit-blue-white;
 			border-radius: 30px;
 			overflow: hidden;
+			margin-bottom: 32px;
 
 			&-image {
+				position: relative;
 				width: 190px;
 
 				img {
+					position: absolute;
+					top: 0;
+					left: 0;
 					width: 100%;
 					height: 100%;
 					object-fit: cover
@@ -164,28 +171,30 @@
 
 			&-body {
 				width: calc(100% - 190px);
-				padding: 34px 22px 30px 30px
+				padding: 35px 22px 30px 27px
 			}
 
 			&-text {
-				margin-bottom: 22px;
+				margin-bottom: 21px;
 
 				h1, h2, h3, h4, h5, h6 {
 					line-height: 1;
-					margin-bottom: 7px
+					margin-bottom: 11px
 				}
 
 				p {
-					color: #344948
+					color: #344948;
+					line-height: $lh-3
 				}
 			}
 
 			&-qr {
 				position: relative;
 				border-radius: 16px;
-				padding: 27px 52px 26px;
+				padding: 28px 53px 24px;
 				overflow: hidden;
 				z-index: 0;
+				cursor: pointer;
 
 				&::before {
 					content: '';
@@ -198,7 +207,84 @@
 					opacity: 0.5;
 					z-index: -1
 				}
+
+				&.active {
+					.tariff-order-rust-qr-checkbox svg {
+						opacity: 1
+					}
+				}
+
+				&-checkbox {
+					position: absolute;
+					top: 29px;
+					left: 29px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					width: 20px;
+					height: 20px;
+
+					&::before {
+						content: '';
+						width: 12px;
+						height: 12px;
+						border-radius: 2px;
+						border: 1px solid $dark-yellow
+					}
+
+					svg {
+						display: block;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
+						opacity: 0;
+						transition: opacity ease-out $tr
+					}
+				}
 			}
+		}
+
+		&-promo {
+			margin-bottom: 28px;
+
+			.label {
+				max-width: 338px;
+				margin-bottom: 0;
+
+				&-text {
+					padding: 0 0 11px
+				}
+			}
+
+			.btn {
+				min-width: 154px;
+				margin-left: auto
+			}
+		}
+
+		&-row:not(:last-child) {
+			margin-bottom: 9px
+		}
+
+		&-col {
+			&:first-child {
+				color: #344948
+			}
+
+			&:last-child {
+				font-size: $fs-lg;
+				color: $very-dark-green
+			}
+
+			&.total-name,
+			&.total-price {
+				color: $dark-yellow
+			}
+		}
+
+		&-purchase {
+			margin-top: 24px
 		}
 	}
 }
