feat: add tariff page responsive and some more logic.

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -131,6 +131,10 @@
 		border-color: $bright-yellow
 	}
 
+	&.hover-gold:hover {
+		background-color: $bright-yellow
+	}
+
 	&.br-24 {
 		border-radius: 24px
 	}
