--- a/src/scss/header/profile.scss
+++ b/src/scss/header/profile.scss
@@ -1,8 +1,11 @@
 .header-profile {
 	position: relative;
+	margin-left: auto;
+	z-index: 10;
 
 	@media (min-width: $xl) {
-		width: 350px
+		width: 350px;
+		margin-left: 0
 	}
 
 	&.opened {
@@ -16,7 +19,9 @@
 	}
 
 	&-icon {
-		margin-right: 6px
+		@media (min-width: $md) {
+			margin-right: 6px
+		}
 	}
 
 	&-button {
@@ -24,11 +29,17 @@
 		font-family: $ff;
 		font-size: $fs-sm;
 		line-height: 1.6;
-		color: $very-dark-green;
+		color: $bright-yellow;
 		padding: 0;
 		border: none;
 		cursor: pointer;
-		transition: opacity ease-out $tr;
+		transition:
+			opacity ease-out $tr,
+			color ease-out $tr;
+
+		@media (min-width: $md) {
+			color: $very-dark-green
+		}
 
 		&:hover {
 			opacity: 0.7
